--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -12,7 +12,7 @@
 :root {
     --avatar-size: 32px;
     --background-image: 
-    --home-image: url('https://i.imgur.com/233d55Y.gif');
+    --home-image: 
     --background-solid: #161921;
     --background-solid-dark: #101218;
     --background-solid-darker: #0c0e12;
