--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -11,7 +11,7 @@
 /* Variables */
 :root {
     --avatar-size: 32px;
-    --background-image: 
+    --background-image: url('https://imgur.com/a/sir5X0H.png');
     --home-image: 
     --background-solid: #161921;
     --background-solid-dark: #101218;
